# cis-to-fleet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TECHNICAL_DESIGN.md  mypy.ini  prompt_plan.md  pyproject.toml  ruff.toml  spec.md  todo.md
.github/workflows/: ci.yml
output/: cis-benchmark-macos13.yml  cis-benchmark-macos14.yml  cis-benchmark-macos15.yml  cis-benchmark-win10.yml  cis-benchmark-win11.yml
scripts/: build.sh
src/cis_to_fleet/: __main__.py  github.py  transform.py  writer.py
src/cis_to_fleet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cis_to_fleet/tui/: __init__.py  app.py
src/fleet_cis_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli_generate_one.py  test_cli_list.py  test_github_fetch.py  test_github_list.py  test_transform_parse.py  test_transform_sanitise.py  test_writer_path.py  test_writer_write.py
tests/fixtures/: expected.yml  sample_raw.yml
